Blog-page hero area, left sidebar, all blog content add

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
   <!-- header-area end -->
 
   <!-- blog hero area start  -->
-  <section class="blog-hero-area">
+  <section class="blog-hero-area section-padding">
     <div class="container section">
-      
+
       <!-- slider wrapper start  -->
       <div class="blog-slider-wrapper">
 
@@ -106,7 +106,7 @@
           <div class="social-link-vertical">
             <ul>
               <li>
-                <a href="#"><i class="fa fa-share" aria-hidden="true"></i></a>
+                <a href="#"><i class="fa fa-share-alt" aria-hidden="true"></i></a>
               </li>
               <li>
                 <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -132,7 +132,8 @@
                     <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
                     <h1><a href="#">The case for AppBinding</a></h1>
                     <p class="author"><span>by </span>Tamal Saha</p>
-                    <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world. Kubernetes upholds
+                    <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
+                      Kubernetes upholds
                       the philosophy that the core should be small and allow developers to write their own extensions.
                       One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
                       as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
@@ -160,6 +161,263 @@
     </div>
   </section>
   <!-- blog hero area end -->
+
+
+  <!-- all blog content start  -->
+  <div class="blog-items-area section-padding-60">
+    <div class="container section">
+      <div class="columns">
+        <!-- left sidebar start  -->
+        <div class="column is-3">
+          <div class="blog-left-sidebar">
+
+            <!-- search-bar start  -->
+            <div class="search-bar">
+              <input type="search" name="search" placeholder="Search">
+              <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+            </div>
+            <!-- search-bar end -->
+
+            <!-- category start  -->
+            <div class="blog-category">
+              <ul>
+                <li><a href="#" class="is-active">All</a></li>
+                <li><a href="#">Analysis</a></li>
+                <li><a href="#">AWS Accounts</a></li>
+                <li><a href="#">AWS Service Releases</a></li>
+                <li><a href="#">Certification</a></li>
+                <li><a href="#">DR</a></li>
+                <li><a href="#">Industry</a></li>
+                <li><a href="#">Multi-Cloud</a></li>
+                <li><a href="#">Naming</a></li>
+                <li><a href="#">Public Speaking</a></li>
+                <li><a href="#">Public Speaking</a></li>
+                <li><a href="#">Reinvent</a></li>
+                <li><a href="#">S3 Buckets</a></li>
+                <li><a href="#">Snarky</a></li>
+                <li><a href="#">Support</a></li>
+                <li><a href="#">Talks</a></li>
+              </ul>
+            </div>
+            <!-- category end  -->
+
+          </div>
+        </div>
+        <!-- left sidebar end -->
+        <div class="column is-9">
+          <div class="columns is-multiline">
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-1"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-2"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-3"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-4"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-5"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-6"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-7"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-8"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. hello text testing Kubernetes cluster here for the </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+            <!-- single blog start  -->
+            <div class="column is-4">
+              <div class="single-blog-item">
+                <div class="blog-image-wrapper">
+                  <a href="#" class="blog-image blog-9"></a>
+                </div>
+                <div class="single-blog-content">
+                  <div class="blog-meta">
+                    <div class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i>1-Jan-19</div>
+                    <div class="meta-author"><a href="#"><span>by</span> Tamal Saha</a></div>
+                  </div>
+                  <div class="blog-description">
+                    <h2><a href="#">Understanding Data
+                        Transfer in AWS</a></h2>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. Kubernetes </p>
+                    <a href="#" class="inline-button">Read More</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- single blog end -->
+
+          </div>
+          <div class="columns">
+            <div class="column has-text-centered">
+                <div class="load-more-button">
+                  <a href="#" class="button is-sm-medium is-primary">Load more</a>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- all blog content end -->
 
 
   <!-- cta-area start  -->
