add custom slider for blog-page hero area

--- a/index.html
+++ b/index.html
@@ -27,8 +27,6 @@
   <link rel="stylesheet" href="/assets/css/font-awesome.min.css" />
   <!-- bulma css  -->
   <link rel="stylesheet" href="/assets/css/bulma.min.css" />
-  <!-- bulma-carousel css  -->
-  <link rel="stylesheet" href="/assets/css/bulma-carousel.min.css" />
   <!-- main style css  -->
   <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
@@ -122,136 +120,110 @@
         </div>
         <!-- social media share area end -->
 
-        <div class="blog-slider-inner hero-carousel is-clipped" id="blogSlider">
+        <div class="blog-slider-inner">
+
+          <!-- slider-button start  -->
+          <div class="slider-button">
+            <button id="sBtn" class="slide"><img src="/assets/images/icons/arrow.svg" alt="arrow"></button>
+          </div>
+          <!-- slider-button end -->
 
           <!-- single slider start  -->
-          <div class="single-blog">
-              <div class="columns">
-                <div class="column is-6">
-                  <!-- left content start  -->
-                  <div class="blog-content-wrapper d-table">
-                    <div class="blog-content-inner d-table-cell">
-                      <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
-                      <h1><a href="#">The case for AppBinding 01</a></h1>
-                      <p class="author"><span>by </span>Tamal Saha</p>
-                      <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
-                        Kubernetes upholds
-                        the philosophy that the core should be small and allow developers to write their own extensions.
-                        One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
-                        as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
-                        standard Kubernetes resources. This allows anyone to write a controller for custom resources and
-                        capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
-                        name for this pattern</p>
-                      <a href="#" class="inline-button">Read More</a>
-                    </div>
+          <div class="single-blog show">
+            <div class="columns">
+              <div class="column is-6">
+                <!-- left content start  -->
+                <div class="blog-content-wrapper d-table">
+                  <div class="blog-content-inner d-table-cell">
+                    <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
+                    <h1><a href="#">Lorem Ipsum for Apps AppBinding</a></h1>
+                    <p class="author"><span>by </span>Tamal Saha</p>
+                    <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
+                      Kubernetes upholds
+                      the philosophy that the core should be small and allow developers to write their own extensions.
+                      One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
+                      as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
+                      standard Kubernetes resources. This allows anyone to write a controller for custom resources and
+                      capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
+                      name for this pattern</p>
+                    <a href="#" class="inline-button">Read More</a>
                   </div>
-                  <!-- left content end -->
                 </div>
-                <div class="column is-6">
-                  <!-- slider image start  -->
-                  <a href="#" class="blog-slider-image blog-bg-3"></a>
-                  <!-- slider image end -->
-                </div>
+                <!-- left content end -->
+              </div>
+              <div class="column is-6">
+                <!-- slider image start  -->
+                <a href="#" class="blog-slider-image blog-bg-3"></a>
+                <!-- slider image end -->
               </div>
             </div>
+          </div>
           <!-- single slider end  -->
 
           <!-- single slider start  -->
           <div class="single-blog">
-              <div class="columns">
-                <div class="column is-6">
-                  <!-- left content start  -->
-                  <div class="blog-content-wrapper d-table">
-                    <div class="blog-content-inner d-table-cell">
-                      <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
-                      <h1><a href="#">The case for 02 slide</a></h1>
-                      <p class="author"><span>by </span>Tamal Saha</p>
-                      <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
-                        Kubernetes upholds
-                        the philosophy that the core should be small and allow developers to write their own extensions.
-                        One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
-                        as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
-                        standard Kubernetes resources. This allows anyone to write a controller for custom resources and
-                        capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
-                        name for this pattern</p>
-                      <a href="#" class="inline-button">Read More</a>
-                    </div>
+            <div class="columns">
+              <div class="column is-6">
+                <!-- left content start  -->
+                <div class="blog-content-wrapper d-table">
+                  <div class="blog-content-inner d-table-cell">
+                    <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
+                    <h1><a href="#">UI design is a lorem Dpsum dular sign</a></h1>
+                    <p class="author"><span>by </span>Tamal Saha</p>
+                    <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
+                      Kubernetes upholds
+                      the philosophy that the core should be small and allow developers to write their own extensions.
+                      One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
+                      as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
+                      standard Kubernetes resources. This allows anyone to write a controller for custom resources and
+                      capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
+                      name for this pattern</p>
+                    <a href="#" class="inline-button">Read More</a>
                   </div>
-                  <!-- left content end -->
                 </div>
-                <div class="column is-6">
-                  <!-- slider image start  -->
-                  <a href="#" class="blog-slider-image blog-bg-"></a>
-                  <!-- slider image end -->
-                </div>
+                <!-- left content end -->
+              </div>
+              <div class="column is-6">
+                <!-- slider image start  -->
+                <a href="" class="blog-slider-image blog-bg-2"></a>
+                <!-- slider image end -->
               </div>
             </div>
+          </div>
           <!-- single slider end  -->
 
           <!-- single slider start  -->
           <div class="single-blog">
-              <div class="columns">
-                <div class="column is-6">
-                  <!-- left content start  -->
-                  <div class="blog-content-wrapper d-table">
-                    <div class="blog-content-inner d-table-cell">
-                      <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
-                      <h1><a href="#">The case for AppBinding 03</a></h1>
-                      <p class="author"><span>by </span>Tamal Saha</p>
-                      <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
-                        Kubernetes upholds
-                        the philosophy that the core should be small and allow developers to write their own extensions.
-                        One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
-                        as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
-                        standard Kubernetes resources. This allows anyone to write a controller for custom resources and
-                        capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
-                        name for this pattern</p>
-                      <a href="#" class="inline-button">Read More</a>
-                    </div>
+            <div class="columns">
+              <div class="column is-6">
+                <!-- left content start  -->
+                <div class="blog-content-wrapper d-table">
+                  <div class="blog-content-inner d-table-cell">
+                    <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
+                    <h1><a href="#">The case for AppBinding</a></h1>
+                    <p class="author"><span>by </span>Tamal Saha</p>
+                    <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
+                      Kubernetes upholds
+                      the philosophy that the core should be small and allow developers to write their own extensions.
+                      One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
+                      as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
+                      standard Kubernetes resources. This allows anyone to write a controller for custom resources and
+                      capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
+                      name for this pattern</p>
+                    <a href="#" class="inline-button">Read More</a>
                   </div>
-                  <!-- left content end -->
                 </div>
-                <div class="column is-6">
-                  <!-- slider image start  -->
-                  <a href="" class="blog-slider-image blog-bg-3"></a>
-                  <!-- slider image end -->
+                <!-- left content end -->
+              </div>
+              <div class="column is-6">
+                <!-- slider image start  -->
+                <div class="blog-slider-image">
+                  <img src="/assets/images/slider-image/s-1.jpg" alt="">
                 </div>
+                <!-- slider image end -->
               </div>
             </div>
-          <!-- single slider end  -->
-
-          <!-- single slider start  -->
-          <div class="single-blog">
-              <div class="columns">
-                <div class="column is-6">
-                  <!-- left content start  -->
-                  <div class="blog-content-wrapper d-table">
-                    <div class="blog-content-inner d-table-cell">
-                      <p class="meta-date"><i class="fa fa-calendar" aria-hidden="true"></i> 1-Jan-19</p>
-                      <h1><a href="#">The case for AppBinding</a></h1>
-                      <p class="author"><span>by </span>Tamal Saha</p>
-                      <p class="description">Kubernetes has become the de-facto orchestrator for the cloud native world.
-                        Kubernetes upholds
-                        the philosophy that the core should be small and allow developers to write their own extensions.
-                        One way to introduce new resource types is using CustomResourceDefintions (CRD) (originally known
-                        as ThirdPartyResources). Using CRDs anyone can define a new resource type that behaves like
-                        standard Kubernetes resources. This allows anyone to write a controller for custom resources and
-                        capture operational knowledge in a software form. CoreOS popularized the term “operators” as a
-                        name for this pattern</p>
-                      <a href="#" class="inline-button">Read More</a>
-                    </div>
-                  </div>
-                  <!-- left content end -->
-                </div>
-                <div class="column is-6">
-                  <!-- slider image start  -->
-                  <div class="blog-slider-image">
-                    <img src="/assets/images/slider-image/s-1.jpg" alt="">
-                  </div>
-                  <!-- slider image end -->
-                </div>
-              </div>
-            </div>
+          </div>
           <!-- single slider end  -->
         </div>
       </div>
@@ -260,7 +232,6 @@
     </div>
   </section>
   <!-- blog hero area end -->
-
 
   <!-- all blog content start  -->
   <div class="blog-items-area section-padding-60">
@@ -474,7 +445,8 @@
                   <div class="blog-description">
                     <h2><a href="#">Understanding Data
                         Transfer in AWS</a></h2>
-                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. hello text testing Kubernetes cluster here for the </p>
+                    <p>Kubernetes has becom de-facto rchestrator for the cloud native world. hello text testing
+                      Kubernetes cluster here for the </p>
                     <a href="#" class="inline-button">Read More</a>
                   </div>
                 </div>
@@ -507,9 +479,9 @@
           </div>
           <div class="columns">
             <div class="column has-text-centered">
-                <div class="load-more-button">
-                  <a href="#" class="button is-sm-medium is-primary">Load more</a>
-                </div>
+              <div class="load-more-button">
+                <a href="#" class="button is-sm-medium is-primary">Load more</a>
+              </div>
             </div>
           </div>
         </div>
@@ -517,7 +489,6 @@
     </div>
   </div>
   <!-- all blog content end -->
-
 
   <!-- cta-area start  -->
   <section class="cta-area section-padding">
